# email-env

./: Dockerfile  README.md  SPACES_README.md  config.py  inference.py  inference_results.json  openenv.yaml  pyproject.toml  requirements.txt  server.py  smoke_test.py
agent/: __init__.py  memory.py  trainer.py
email-env/: Dockerfile  README.md  SPACES_README.md  app.py
email-env/agent/: policy.py  strategy.py
email-env/data/: dataset.py
env/: __init__.py  core.py  models.py
graders/: engine.py
rewards/: engine.py
server/: app.py
tasks/: manager.py
